manifests/otelcol.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otel-collector
  template:
    metadata:
      labels:
        app: otel-collector
    spec:
      containers:
      - name: otel-collector
        image: flytux/otelcol-contrib:v0.152
        args: ["--config=/etc/otelcol/config.yaml"]
        ports:
        - containerPort: 4317
        - containerPort: 4318
        - containerPort: 55679
        - containerPort: 8888
        volumeMounts:
        - name: config-volume
          mountPath: /etc/otelcol/config.yaml
          subPath: config.yaml
      volumes:
      - name: config-volume
        configMap:
          name: otel-collector-config
---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector-service
spec:
  selector:
    app: otel-collector
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
    - name: otlp-http
      port: 4318
      targetPort: 4318
    - name: zpages
      port: 55679
      targetPort: 55679
    - name: metrics
      port: 8888
      targetPort: 8888
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otel-collector-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: otelcol.node-01
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: otel-collector-service
            port:
              number: 55679
